Second blogs.html webpage finished

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/font/flaticon.css">
 </head>
-<body>
+<body class="home-body">
     <header>
         <section class="header-icons-container">
             <div class="icons">
@@ -30,8 +30,9 @@
     <div class="main-div">
         <section class="intro">
             Conoce las novedad y noticias del Mundo Tech
+        
         </section>
-        <button>Entra ya!</button>
+        <button><a href="blogs.html">Entra Ya!</a></button>
     </div>
 </body>
 </html>
