Finished the template, the only thing left is to personalize the blog

--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/font/flaticon.css">
+    <link rel="stylesheet" href="css/media-queries.css">
 </head>
 <body>
     <header>
@@ -27,7 +28,44 @@
             </section>
         </nav>
     </header>
-
+    <main>
+        <section class="blogpost-img-container">
+            <img src="/assets/img/post-1.png" alt="">
+        </section>
+        <section class="blogpost-main-container">
+            <div clas="grid-container">
+                <h3>Noticias</h3>
+                <article>
+                    <h1>Título del Blogspot</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing 
+                        elit. Totam commodi ut 
+                        consectetur cumque repudiandae ea velit unde, 
+                        aut debitis quo.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, quas. Distinctio optio, voluptatem fugiat laudantium in nihil eveniet. Vitae, iusto veritatis animi placeat minima consequuntur. Dolores, molestiae ratione! Minima, tenetur!
+                    Unde, expedita numquam deleniti corrupti ab minima harum corporis optio! Reiciendis iste quidem maxime hic itaque in unde magni, doloribus provident alias, possimus eos amet optio accusamus, ad nesciunt rerum.
+                    Nobis quos quibusdam commodi necessitatibus minus odio sequi ea quaerat neque cum sapiente modi numquam beatae exercitationem perferendis repellat totam eum nihil fugiat dolor voluptatem, illum ipsum consequuntur. Ratione, iusto.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam facere, magnam eum veniam officiis impedit rem quibusdam rerum. Pariatur atque sit esse cum iure cupiditate rerum incidunt voluptatibus reprehenderit autem.
+                    Velit fugiat molestias tempore earum dolorem vitae, autem recusandae rem ratione eum libero dignissimos quos molestiae id quia, sint qui suscipit? Repudiandae, quidem temporibus. Qui corporis quo enim rerum ut.</p>
+                </article>
+            </div>
+        </section>
+        <section class="contact-main-container">
+            <div class="contact-left-container">
+                <img src="./assets/img/013-newsletter.png" alt="">
+                <div class="contact-left">
+                    <a href="">Contacto</a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, eum?</p>
+                </div>
+            </div>
+            <div class="contact-right-container">
+                <img src="./assets/img/006-like.png" alt="">
+                <div class="contact-right">
+                    <a href="">Escribe</a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, amet!</p>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer>
         <p>lore lore lore, schoen sind die maedchen von zwanzig jahre alt</p>
     </footer>
