--- a/perfil.html
+++ b/perfil.html
@@ -4,8 +4,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/font/flaticon.css">
+    <link rel="stylesheet" href="css/media-queries.css">
+</head>
 </head>
 <body>
-    
+    <header>
+        <section class="header-icons-container">
+            <div class="icons">
+                <a href="/"><span class="flaticon-001-facebook"></span></a>
+                <a href="/"><span class="flaticon-002-twitter"></span></a>
+                <a href="/"><span class="flaticon-011-instagram"></span></a>
+                <a href="/"><span class="flaticon-010-linkedin"></span></a>
+                <a href="/"><span class="flaticon-008-youtube"></span></a>
+            </div>
+        </section>
+        <nav>
+            <section class="nav-logo-container">
+                <a href=""><img src="/assets/img/Logo-negro.png" alt="Logo de mi blog"></a>
+            </section>
+            <section class="profile-link">
+                <a href="perfil.html">Sobre Mi</a>
+            </section>
+        </nav>
+    </header>
+    <main>
+        <section class="blogs-news-container">
+            <div class="grid-container blogs-main-new">
+                <h3>Daniel Bazán</h3>
+                <div class="blogs-news-img-container">
+                    <img src="assets/img/main-news-img.png" alt="">
+                </div>
+                <div class="blogs-news-info-container">
+                    <h2>Hola!</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                         Porro numquam obcaecati nihil et mollitia atque sequi 
+                        assumenda rerum molestiae deleniti explicabo.</p>
+                    <a href="" class="blogs-button">Leer más</a>
+                </div>
+            </div>
+        </section>
+        <section class="blogs-posts-container">
+            <div class="grid-container">
+                <h3>Proyectos</h3>
+                <article class="post-container 1">
+                    <p>Título del Blogpost</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus 
+                        provident pariatur cum aliquid. Temporibus 
+                        sit corrupti ipsam sunt enim
+                    </p>
+                </article>
+                <article class="post-container 1">
+                    <p>Título del Blogspot</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus 
+                        provident pariatur cum aliquid. Temporibus 
+                        sit corrupti ipsam sunt enim
+                    </p>
+                </article>
+                <article class="post-container 1">
+                    <p>Título del Blogpost</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus 
+                        provident pariatur cum aliquid. Temporibus 
+                        sit corrupti ipsam sunt enim
+                    </p>
+                </article>
+            </div>
+        </section>
+        <section class="contact-main-container">
+            <div class="contact-left-container">
+                <img src="./assets/img/013-newsletter.png" alt="">
+                <div class="contact-left">
+                    <a href="">Contacto</a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, eum?</p>
+                </div>
+            </div>
+            <div class="contact-right-container">
+                <img src="./assets/img/006-like.png" alt="">
+                <div class="contact-right">
+                    <a href="">Escribe</a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, amet!</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>lore lore lore, schoen sind die maedchen von zwanzig jahre alt</p>
+    </footer>
 </body>
 </html>
