--- a/perfil.html
+++ b/perfil.html
@@ -13,12 +13,9 @@
     <header>
         <section class="header-icons-container">
             <div class="icons">
-                <a href="/"><span class="flaticon-001-facebook"></span></a>
-                <a href="/"><span class="flaticon-002-twitter"></span></a>
-                <a href="/"><span class="flaticon-011-instagram"></span></a>
-                <a href="/"><span class="flaticon-010-linkedin"></span></a>
-                <a href="/"><span class="flaticon-008-youtube"></span></a>
-            </div>
+                <a href="https://www.facebook.com/profile.php?id=100009590250037"><span class="flaticon-001-facebook"></span></a>
+                <a href="https://www.instagram.com/alterdan93/"><span class="flaticon-011-instagram"></span></a>
+                <a href=https://www.linkedin.com/in/daniel-manzano-702254282/"><span class="flaticon-010-linkedin"></span></a>
         </section>
         <nav>
             <section class="nav-logo-container">
@@ -34,13 +31,18 @@
             <div class="grid-container blogs-main-new">
                 <h3>Daniel Bazán</h3>
                 <div class="blogs-news-img-container">
-                    <img src="assets/img/main-news-img.png" alt="">
+                    <img src="/assets/img/msg1951140711-47527.jpg" alt="">
                 </div>
                 <div class="blogs-news-info-container">
                     <h2>Hola!</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                         Porro numquam obcaecati nihil et mollitia atque sequi 
-                        assumenda rerum molestiae deleniti explicabo.</p>
+                    <p>Mucho gusto! Soy un físico que le encanta aprender en sus tiempos libres
+                        electrónica, computación, música por ejemplo. Me encantaría compartirles mi sed 
+                        de conocimiento con algunos blogs.
+                    </p>
+                    <p>Actualmente estudio la licenciatura en física en la UNAM
+                        mis planes a futuro son conseguir un empleo en IT, aun que no tengo
+                        contemplado despedirme de la investigación
+                    </p>
                     <a href="" class="blogs-button">Leer más</a>
                 </div>
             </div>
