--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
     <header>
         <section class="header-icons-container">
             <div class="icons">
-                <a href="/"><span class="flaticon-001-facebook"></span></a>
-                <a href="/"><span class="flaticon-002-twitter"></span></a>
-                <a href="/"><span class="flaticon-011-instagram"></span></a>
-                <a href="/"><span class="flaticon-010-linkedin"></span></a>
-                <a href="/"><span class="flaticon-008-youtube"></span></a>
+                <a href="https://www.facebook.com/profile.php?id=100009590250037"><span class="flaticon-001-facebook"></span></a>
+                <a href="https://www.instagram.com/alterdan93/"><span class="flaticon-011-instagram"></span></a>
+                <a href="https://www.linkedin.com/in/daniel-manzano-702254282/"><span class="flaticon-010-linkedin"></span></a>
             </div>
         </section>
         <nav>
